--- a/WordCount/WordCount/Base.lproj/Main.storyboard
+++ b/WordCount/WordCount/Base.lproj/Main.storyboard
@@ -18,13 +18,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" text="Hi there, please feel free to type and check the stats :)" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="4gB-qF-liK">
-                                <rect key="frame" x="0.0" y="20" width="600" height="204"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Hi there, please feel free to type and check the stats :)" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="4gB-qF-liK">
+                                <rect key="frame" x="0.0" y="20" width="600" height="175"/>
                                 <color key="backgroundColor" red="0.97297676282051271" green="0.97297676282051271" blue="0.97297676282051271" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="240" id="8P5-nA-EnQ"/>
                                     <constraint firstAttribute="height" constant="128" id="jms-J5-uZE"/>
-                                    <constraint firstAttribute="height" constant="200" id="y1w-Kt-W0h"/>
+                                    <constraint firstAttribute="height" constant="175" id="y1w-Kt-W0h"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
